monticore-generator/src/test/resources/cocos/invalid/A0125/A0125b.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0125;

grammar A0125b {

  symbol C1;

  symbol A extends C1;

}
